@@ -1,7 +1,6 @@
 package gdsc.konkuk.platformcore.controller.email.mapper;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import gdsc.konkuk.platformcore.controller.email.dtos.EmailTaskDetailsResponse;
 import gdsc.konkuk.platformcore.controller.email.dtos.EmailTaskListResponse;
@@ -15,12 +14,9 @@ public class EmailTaskMapper {
 
   public static EmailTaskListResponse mapToEmailTaskListResponse(List<EmailTask> emailTasks) {
     List<SimpleEmailTaskResponse> simpleEmailTaskResponses =
-        emailTasks.stream()
-            .flatMap(
-                emailTask ->
-                    emailTask.getEmailReceivers().getReceivers().stream()
-                        .map(receiver -> SimpleEmailTaskResponse.of(emailTask, receiver)))
-            .collect(Collectors.toList());
+      emailTasks.stream()
+        .map(SimpleEmailTaskResponse::from)
+        .toList();
     return new EmailTaskListResponse(simpleEmailTaskResponses);
   }
 
